<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.attendance.fragment.AttendanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_attendance"
            style="@style/MaterialTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/tv_attendance"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_user_attendance"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="#939292"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_attendance"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btn_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_add_a_photo"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_attendance"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_attendance"
            app:layout_constraintStart_toStartOf="@+id/iv_user_attendance"
            app:layout_constraintTop_toTopOf="@+id/iv_user_attendance"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_nama"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_et_name"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_attendance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_status"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_status"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_et_status"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_status">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_wfh"
                style="@style/RadioButtonCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_from_home" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_wfo"
                style="@style/RadioButtonCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_from_office" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_time"
            android:minHeight="48dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_activity" />

        <ProgressBar
            android:id="@+id/progress_bar_attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_time"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_attendance"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_attendance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_attendance"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>